--- a/index.html
+++ b/index.html
@@ -576,6 +576,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
+    <!--
     <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -656,7 +657,9 @@
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section>
+    -->
+    <!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -733,13 +736,13 @@
     <div class="container">
       <h3>Lénia Amaral</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
-      <div class="social-links">
+      <!--<div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
+      </div>-->
     </div>
   </footer><!-- End Footer -->
 
