--- a/index.html
+++ b/index.html
@@ -482,6 +482,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
+    <!--
     <section id="services" class="services">
       <div class="container" data-aos="fade-up">
 
@@ -573,7 +574,9 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section>
+    -->
+    <!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <!--
@@ -598,9 +601,11 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
+          -->
+            <!-- End testimonial item -->
 
-            <div class="swiper-slide">
+            <!--<div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                 <h3>Sara Wilsson</h3>
@@ -613,7 +618,7 @@
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+            <!--<div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                 <h3>Jena Karlis</h3>
@@ -626,7 +631,7 @@
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+            <!--<div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                 <h3>Matt Brandon</h3>
@@ -639,7 +644,7 @@
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+            <!--<div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>John Larson</h3>
@@ -651,7 +656,7 @@
                 </p>
               </div>
             </div><!-- End testimonial item -->
-
+    <!--        
           </div>
           <div class="swiper-pagination"></div>
         </div>
