new publication detail template

--- a/publication-details_revistaANO.html
+++ b/publication-details_revistaANO.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Personal Bootstrap Template</title>
+  <title>Publication Details</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -64,17 +64,21 @@
             <div class="portfolio-info">
               <h3>Publication information</h3>
               <ul>
-                <li><strong>Title</strong>: Web design</li>
-                <li><strong>Authors</strong>: ASU Company</li>
-                <li><strong>Publication date</strong>: 01 March, 2020</li>
-                <li><strong>Journal</strong>: <a href="#">www.example.com</a></li>
-                <li><strong>DOI</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Title</strong>: Hemispheric asymmetries in subcortical visual and auditory relay structures in congenital deafness</li>
+                <li><strong>Authors</strong>: L Amaral, A Ganho-Ávila, A Osório, Marta J Soares, D He, Q Chen, BZ Mahon, OF Gonçalves, Adriana Sampaio, F Fang, Y Bi, J Almeida</li>
+                <li><strong>Publication year</strong>: 2016</li>
+                <li><strong>Journal</strong>: European Journal of Neuroscience</li>
+                <li><strong>DOI</strong>: <a href="https://doi.org/10.1111/ejn.13340">https://doi.org/10.1111/ejn.13340</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Abstract:</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Neuroplasticity - the capacity of the brain to change as a response to internal and external pressures - has been studied from a number of different perspectives. Perhaps one of the most powerful models is the study of populations that have been congenitally deprived of a sense. 
+                It has been shown that the right Auditory Cortex (AC) of congenitally deaf humans is neuroplastically modified in order to represent visual properties of a stimulus. One unresolved question is how this visual information is routed to the AC of congenitally deaf individuals. 
+                Here, we performed volumetric analysis of subcortical auditory and visual brains regions - namely the thalamus (along with three thalamic nuclei: the pulvinar, the lateral geniculate nucleus and the medial geniculate nucleus), and the inferior and superior colliculi - in deaf and hearing participants in order to identify which structures may be responsible for relaying visual information toward the altered AC. 
+                Because there is a hemispheric asymmetry in the neuroplastic changes observed in the AC of the congenitally deaf, we reasoned that subcortical structures that also showed a similar asymmetry in their total volume could have been enlisted in the effort of relaying visual information to the neuroplastically altered right AC. 
+                We show that for deaf, but not for hearing individuals, the right thalamus, right lateral geniculate nucleus and right inferior colliculus are larger than their left counterparts. These results suggest that these subcortical structures may be responsible for rerouting visual information to the AC in congenital deafness.
               </p>
             </div>
           </div>
