--- a/publication-details_revistaANO.html
+++ b/publication-details_revistaANO.html
@@ -71,6 +71,11 @@
                 <li><strong>DOI</strong>: <a href="https://doi.org/10.1111/ejn.13340">https://doi.org/10.1111/ejn.13340</a></li>
               </ul>
             </div>
+          </div>
+        </div>  
+
+        <div class="row gy-4">
+          <div class="col-lg-12"></div>
             <div class="portfolio-description">
               <h2>Abstract:</h2>
               <p>
