test open href in new tab

--- a/publication-details_revistaANO.html
+++ b/publication-details_revistaANO.html
@@ -68,7 +68,7 @@
                 <li><strong>Authors</strong>: L Amaral, A Ganho-Ávila, A Osório, Marta J Soares, D He, Q Chen, BZ Mahon, OF Gonçalves, Adriana Sampaio, F Fang, Y Bi, J Almeida</li>
                 <li><strong>Publication year</strong>: 2016</li>
                 <li><strong>Journal</strong>: European Journal of Neuroscience</li>
-                <li><strong>DOI</strong>: <a href="https://doi.org/10.1111/ejn.13340">https://doi.org/10.1111/ejn.13340</a></li>
+                <li><strong>DOI</strong>: <a href="https://doi.org/10.1111/ejn.13340" target="_blank" rel="noopener noreferrer">https://doi.org/10.1111/ejn.13340</a></li>
               </ul>
             </div>
           </div>
