--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
                 <h4>European Journal of Neuroscience - 2016</h4>
                 <p>Publication</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="publication-details_revistaANO.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
+                  <a href="publication-details_revistaANO.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Publication Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
