change main_detail margins

--- a/publication-details_revistaANO.html
+++ b/publication-details_revistaANO.html
@@ -31,7 +31,7 @@
 
 <body>
 
-  <main id="main">
+  <main id="main_detail">
 
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
