all publications detail

--- a/index.html
+++ b/index.html
@@ -347,11 +347,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>European Journal of Neuroscience - 2016</h4>
+                <h4>GeroScience - 2023</h4>
                 <p>Publication</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
-                  <a href="publication-details_revistaANO.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Publication Details"><i class="bx bx-link"></i></a>
+                  <a href="publication-details_GeroScience2023.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Publication Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -373,13 +373,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
+                <h4>Cortex - 2022</h4>
                 <p>Publication</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
+                  <a href="publication-details_Cortex2022.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Publication Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -393,6 +393,34 @@
                 <p>Science Outreach</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Cortex - 2021</h4>
+                <p>Publication</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
+                  <a href="publication-details_Cortex2021.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Publication Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-outreach">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Card 1</h4>
+                <p>Science Outreach</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -415,27 +443,69 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 3</h4>
+                <h4>Cognitive Neuropsychology - 2018</h4>
                 <p>Publication</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
+                  <a href="publication-details_CognitiveNeuropsychology2018.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Publication Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-outreach">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Science Outreach</p>
+                <h4>Journal of Experimental Psychology - 2018</h4>
+                <p>Publication</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
+                  <a href="publication-details_JEP2018.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Publication Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Cortex - 2017</h4>
+                <p>Publication</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
+                  <a href="publication-details_Cortex2017.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Publication Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>European Journal of Neuroscience - 2016</h4>
+                <p>Publication</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
+                  <a href="publication-details_EJN2016.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Publication Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Revista Portuguesa de Psicologia - 2015</h4>
+                <p>Publication</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
+                  <a href="publication-details_RPP2015.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Publication Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
