--- a/index.html
+++ b/index.html
@@ -57,13 +57,15 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Lénia Amaral</h1>
       <p>I'm a <span class="typed" data-typed-items="Cognitive Neuroscientist, Woman in Science, Science Comunicator"></span></p>
-      <!-- <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div> -->
+      <div class="social-links">
+        <a href="#" class="linkedin" title="LinkedIn"><i class="bx bxl-linkedin"></i></a>
+        <a href="#" class="twitter" title="Twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="linkedin" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="#" class="twitter" title="Twitter"><i class="fa-brands fa-twitter"></i></a>
+        <a href="#" class="facebook" title="ReaserchGate"><i class="fa-brands fa-researchgate"></i></a>
+        <a href="#" class="instagram" title="Orcid"><i class="fa-brands fa-orcid"></i></a>
+        
+      </div>
     </div>
   </section><!-- End Hero -->
 
@@ -827,6 +829,9 @@
   <script src="assets/vendor/typed.js/typed.umd.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/f403aacfdd.js" crossorigin="anonymous"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
