change about scetion

--- a/index.html
+++ b/index.html
@@ -77,8 +77,16 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My research focuses on brain organization and neuroplasticity. I have been studying the neural organization of conceptual knowledge and how network activity influences this neural processing. I am also interested in exploring how neuroplasticity shapes cognitive systems (e.g., through deafness or aging). To address these issues, I employ a multimodal strategy that includes fMRI, neuromodulation, neuropsychological and behavioral data.
-            I'm also dedicated to enhancing the effectiveness of science communication and to fostering the empowerment of women within the field of science.
+          <h3>Hey there, I'm Lénia Amaral!</h3>
+          <h4>Scientist by Day, Plant Enthusiast by Heart, Foodie by Passion, and Traveler by Soul</h4>
+          <p>
+            Welcome to my academic corner, where I'll take you through my scientific journey, discoveries, and a sneak peek into my intellectual interests. Let's dive into the world of academia and beyond! 
+            <i class='bx bx-leaf' ></i>
+            <i class='bx bx-bowl-hot'></i>
+            <i class='bx bxs-plane-alt' ></i>
+          </p>
+          <p></p>
+            My primary focus lies in the field of neuroscience, which encompasses a wide range of intriguing areas like neuroimaging, neurocognition, neuromodulation, neuropsychology, and neuroplasticity. This diverse interest not only guides my academic pursuits but also motivates me to contribute meaningfully to the constantly evolving landscape of neuroscientific research.
           </p>
         </div>
 
@@ -133,7 +141,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="79" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="80" data-purecounter-duration="1" class="purecounter"></span>
               <p>Citations</p>
             </div>
           </div>
