change facts icons

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <i class='bx bx-bowl-hot'></i>
             <i class='bx bxs-plane-alt' ></i>
           </p>
+          </br>
           <p></p>
             My primary focus lies in the field of neuroscience, which encompasses a wide range of intriguing areas like neuroimaging, neurocognition, neuromodulation, neuropsychology, and neuroplasticity. This diverse interest not only guides my academic pursuits but also motivates me to contribute meaningfully to the constantly evolving landscape of neuroscientific research.
           </p>
@@ -130,7 +131,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
+              <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1" class="purecounter"></span>
               <p>Publications</p>
             </div>
@@ -138,7 +139,7 @@
 
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
-              <i class="bi bi-journal-richtext"></i>
+              <i class="bi bi-blockquote-left"></i>
               <span data-purecounter-start="0" data-purecounter-end="80" data-purecounter-duration="1" class="purecounter"></span>
               <p>Citations</p>
             </div>
@@ -146,7 +147,7 @@
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
-              <i class="bi bi-headset"></i>
+              <i class="bi bi-graph-up"></i>
               <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
               <p>H-Index</p>
             </div>
@@ -207,7 +208,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">The Deconding Toolbox <i class="val">100%</i></span>
+              <span class="skill">The Decoding Toolbox <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -260,25 +261,31 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>ADD SOME TEXT HERE.... Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>
+            I started my academic journey at the University of Minho in Portugal, earning both my bachelor's and master's degrees. 
+            Later, I became a research assistant at the University of Coimbra, where I decided to pursue my PhD. 
+            And now, I'm a postdoc at Georgetown University in the USA. 
+            Join me as I continue to explore the world of neuroscience! 
+            <i class='bx bx-world' ></i>
+            <i class='bx bx-brain' ></i>
+            <i class='bx bx-book' ></i>
+          </p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>PhD in Neuropsychology</h4>
+              <h4>PhD in Neuropsychology: "Uncovering the interaction between hands and tools: are these categories dissociable"</h4>
               <h5>2017 - 2022</h5>
               <p><em>Faculty of Psychology and Educational Sciences, University of Coimbra, Portugal</em></p>
               <p>Faculty advisor: Dr. Jorge Almeida. Co-advisor: Dr. Fredrik Bergström.</p>
-              <p>Approved unanimously, with Distinction and Honors.</p>
             </div>
             <div class="resume-item">
-              <h4>Master's in Psychology</h4>
+              <h4>Master's in Psychology: "Volumetric analysis of cortical and subcortical regions in congenital deafness"</h4>
               <h5>2012 - 2014</h5>
               <p><em>School of Psychology, University of Minho, Braga, Portugal</em></p>
               <p>Faculty advisor: Dr. Óscar Gonçalves. Co-advisor: Dr. Jorge Almeida.</p>
-              <p>Classification: 18 points (out of 20)</p>
             </div>
             <div class="resume-item">
               <h4>BA in Psychological Sciences</h4>
