--- a/index.html
+++ b/index.html
@@ -276,14 +276,16 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>PhD in Neuropsychology: "Uncovering the interaction between hands and tools: are these categories dissociable"</h4>
+              <h4>PhD in Neuropsychology</h4>
               <h5>2017 - 2022</h5>
+              <h6>Thesis title: "Uncovering the interaction between hands and tools: are these categories dissociable"</h6>
               <p><em>Faculty of Psychology and Educational Sciences, University of Coimbra, Portugal</em></p>
               <p>Faculty advisor: Dr. Jorge Almeida. Co-advisor: Dr. Fredrik Bergström.</p>
             </div>
             <div class="resume-item">
-              <h4>Master's in Psychology: "Volumetric analysis of cortical and subcortical regions in congenital deafness"</h4>
+              <h4>Master's in Psychology</h4>
               <h5>2012 - 2014</h5>
+              <h6>Thesis title: "Volumetric analysis of cortical and subcortical regions in congenital deafness"</h6>
               <p><em>School of Psychology, University of Minho, Braga, Portugal</em></p>
               <p>Faculty advisor: Dr. Óscar Gonçalves. Co-advisor: Dr. Jorge Almeida.</p>
             </div>
