test geroscience image

--- a/index.html
+++ b/index.html
@@ -278,14 +278,14 @@
             <div class="resume-item">
               <h4>PhD in Neuropsychology</h4>
               <h5>2017 - 2022</h5>
-              <h6>Thesis title: "Uncovering the interaction between hands and tools: are these categories dissociable"</h6>
+              <h6>Title: "Uncovering the interaction between hands and tools: are these categories dissociable"</h6>
               <p><em>Faculty of Psychology and Educational Sciences, University of Coimbra, Portugal</em></p>
               <p>Faculty advisor: Dr. Jorge Almeida. Co-advisor: Dr. Fredrik Bergström.</p>
             </div>
             <div class="resume-item">
               <h4>Master's in Psychology</h4>
               <h5>2012 - 2014</h5>
-              <h6>Thesis title: "Volumetric analysis of cortical and subcortical regions in congenital deafness"</h6>
+              <h6>Title: "Volumetric analysis of cortical and subcortical regions in congenital deafness"</h6>
               <p><em>School of Psychology, University of Minho, Braga, Portugal</em></p>
               <p>Faculty advisor: Dr. Óscar Gonçalves. Co-advisor: Dr. Jorge Almeida.</p>
             </div>
@@ -362,12 +362,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/GeroScience2023.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>GeroScience - 2023</h4>
                 <p>Publication</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/GeroScience2023.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Zoom Image"><i class="bx bx-plus"></i></a>
                   <a href="publication-details_GeroScience2023.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Publication Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
