--- a/index.html
+++ b/index.html
@@ -83,10 +83,6 @@
             <i class='bx bx-bowl-hot'></i>
             <i class='bx bxs-plane-alt' ></i>
           </p>
-          </br>
-          <p></p>
-            My primary focus lies in the field of neuroscience, which encompasses a wide range of intriguing areas like neuroimaging, neurocognition, neuromodulation, neuropsychology, and neuroplasticity. This diverse interest not only guides my academic pursuits but also motivates me to contribute meaningfully to the constantly evolving landscape of neuroscientific research.
-          </p>
         </div>
 
         <div class="row">
@@ -96,7 +92,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Cognitive Neuroscientist.</h3>
             <p class="fst-italic">
-              My primary area of interest revolves around neuroscience, encompassing various captivating fields such as neuroimaging, neurocognition, neuromodulation, neuropsychology, and neuroplasticity. This multifaceted passion not only fuels my academic pursuits but also drives my commitment to making meaningful contributions to the ever-evolving landscape of neuroscientific research.
+              My primary focus lies in the field of neuroscience, which encompasses a wide range of intriguing areas like neuroimaging, neurocognition, neuromodulation, neuropsychology, and neuroplasticity. This diverse interest not only guides my academic pursuits but also motivates me to contribute meaningfully to the constantly evolving landscape of neuroscientific research.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -194,23 +190,23 @@
             </div>
 
             <div class="progress">
-              <span class="skill">SPM <i class="val">100%</i></span>
+              <span class="skill">TMS <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">tDCS <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CoSMoMVPA <i class="val">100%</i></span>
+              <span class="skill">Matlab <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">The Decoding Toolbox <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -221,30 +217,30 @@
             
 
             <div class="progress">
-              <span class="skill">Conn Toolbox <i class="val">80%</i></span>
+              <span class="skill">Conn Toolbox <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">SPM <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Matlab <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">TMS <i class="val">80%</i></span>
+              <span class="skill">CoSMoMVPA <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">tDCS <i class="val">100%</i></span>
+              <span class="skill">The Decoding Toolbox <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -278,14 +274,14 @@
             <div class="resume-item">
               <h4>PhD in Neuropsychology</h4>
               <h5>2017 - 2022</h5>
-              <h6>Title: "Uncovering the interaction between hands and tools: are these categories dissociable"</h6>
+              <h6>"Uncovering the interaction between hands and tools: are these categories dissociable"</h6>
               <p><em>Faculty of Psychology and Educational Sciences, University of Coimbra, Portugal</em></p>
               <p>Faculty advisor: Dr. Jorge Almeida. Co-advisor: Dr. Fredrik Bergström.</p>
             </div>
             <div class="resume-item">
               <h4>Master's in Psychology</h4>
               <h5>2012 - 2014</h5>
-              <h6>Title: "Volumetric analysis of cortical and subcortical regions in congenital deafness"</h6>
+              <h6>"Volumetric analysis of cortical and subcortical regions in congenital deafness"</h6>
               <p><em>School of Psychology, University of Minho, Braga, Portugal</em></p>
               <p>Faculty advisor: Dr. Óscar Gonçalves. Co-advisor: Dr. Jorge Almeida.</p>
             </div>
@@ -293,7 +289,6 @@
               <h4>BA in Psychological Sciences</h4>
               <h5>2009 - 2012</h5>
               <p><em>School of Psychology, University of Minho, Braga, Portugal</em></p>
-              <p>ADD SOMETHING HERE....</p>
             </div>
           </div>
 
