--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <!-- Academic icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+
 </head>
 
 <body>
@@ -58,10 +61,10 @@
       <h1>Lénia Amaral</h1>
       <p>I'm a <span class="typed" data-typed-items="Cognitive Neuroscientist, Woman in Science, Science Comunicator"></span></p>
       <div class="social-links">
-        <a href="#" class="linkedin" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="#" class="linkedin" title="Google Schollar"><i class="ai ai-google-scholar"></i></a>
         <a href="#" class="twitter" title="Twitter"><i class="fa-brands fa-twitter"></i></a>
-        <a href="#" class="facebook" title="ReaserchGate"><i class="fa-brands fa-researchgate"></i></a>
-        <a href="#" class="instagram" title="Orcid"><i class="fa-brands fa-orcid"></i></a>
+        <a href="#" class="facebook" title="ReaserchGate"><i class="ai ai-researchgate-square"></i></a>
+        <a href="#" class="instagram" title="Orcid"><i class="ai ai-orcid-square"></i></a>
         
       </div>
     </div>
@@ -204,9 +207,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Matlab <i class="val">80%</i></span>
+              <span class="skill">Matlab <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
