--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       <h1>Lénia Amaral</h1>
       <p>I'm a <span class="typed" data-typed-items="Cognitive Neuroscientist, Woman in Science, Science Comunicator"></span></p>
       <div class="social-links">
-        <a href="https://scholar.google.com/citations?user=Ze-s-wEAAAAJ&hl=en" class="googlescholar" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
-        <a href="https://twitter.com/AmaralLenia" class="twitter" title="Twitter"><i class="fa-brands fa-twitter"></i></a>
-        <a href="https://www.researchgate.net/profile/Lenia-Amaral-2" class="researchgate" title="ReaserchGate"><i class="ai ai-researchgate-square"></i></a>
-        <a href="https://orcid.org/0000-0002-0631-7944" class="orcid" title="Orcid"><i class="ai ai-orcid-square"></i></a>
+        <a href="https://scholar.google.com/citations?user=Ze-s-wEAAAAJ&hl=en" class="googlescholar" title="Google Scholar" target="_blank" rel="noopener noreferrer"><i class="ai ai-google-scholar"></i></a>
+        <a href="https://twitter.com/AmaralLenia" class="twitter" title="Twitter" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://www.researchgate.net/profile/Lenia-Amaral-2" class="researchgate" title="ReaserchGate" target="_blank" rel="noopener noreferrer"><i class="ai ai-researchgate-square"></i></a>
+        <a href="https://orcid.org/0000-0002-0631-7944" class="orcid" title="Orcid" target="_blank" rel="noopener noreferrer"><i class="ai ai-orcid-square"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
