--- a/meetings-details_ExperimentalPsychology2021.html
+++ b/meetings-details_ExperimentalPsychology2021.html
@@ -44,15 +44,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="assets/img/portfolio/meetings/APPE2021.JPG" alt="">
                 </div>
 
               </div>
@@ -66,7 +58,7 @@
               <ul>
                 <li><strong>Title</strong>: "What connects hands and tools? - relating category preferences to functional connectivity preferences"</li>
                 <li><strong>Authors</strong>: Amaral. L., Bergström, F., & Almeida, J. </li>
-                <li><strong>Presentation year</strong>: 2121</li>
+                <li><strong>Presentation year</strong>: 2021</li>
                 <li><strong>Conference/Meeting</strong>: 15th Annual meeting of the Portuguese Association for Experimental Psychology. Online meeting</li>
               </ul>
             </div>
