index - portfolio img fix

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/GeroScience2023.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/publications/GeroScience2023.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>GeroScience - 2023</h4>
                 <p>Publication</p>
@@ -373,7 +373,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-meeting">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/meetings/APPE2022.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>International APPE-SEPEX Meeting - 2022</h4>
                 <p>Scientific Meeting</p>
@@ -387,7 +387,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/publications/cortex2022.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Cortex - 2022</h4>
                 <p>Publication</p>
@@ -415,7 +415,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-meeting">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/meetings/APPE2021.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>15th Annual meeting of the Portuguese Association for Experimental Psychology - 2021</h4>
                 <p>Scientific Meeting</p>
@@ -429,7 +429,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/publications/cortex2021.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Cortex - 2021</h4>
                 <p>Publication</p>
@@ -443,7 +443,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-meeting">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/meetings/FEN2021.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>FENS Virtual Forum - 2020</h4>
                 <p>Scientific Meeting</p>
@@ -471,7 +471,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-meeting">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/meetings/caos2018.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Workshop on Concepts, Actions, and Objects - Functional and Neural Perspectives - 2018</h4>
                 <p>Scientific Meeting</p>
@@ -485,7 +485,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/publications/cogneuro2018.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Cognitive Neuropsychology - 2018</h4>
                 <p>Publication</p>
@@ -499,7 +499,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/publications/JEPgeneral2018.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Journal of Experimental Psychology - 2018</h4>
                 <p>Publication</p>
@@ -513,7 +513,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/publications/cortex2021.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Cortex - 2017</h4>
                 <p>Publication</p>
@@ -527,7 +527,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-meeting">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/meetings/Barcelona2017.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>2nd International Brain Conference - 2017</h4>
                 <p>Scientific Meeting</p>
@@ -541,7 +541,7 @@
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/publications/EJN2016.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>European Journal of Neuroscience - 2016</h4>
                 <p>Publication</p>
@@ -555,7 +555,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-publication">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/publications/revistapt2015.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Revista Portuguesa de Psicologia - 2015</h4>
                 <p>Publication</p>
