--- a/index.html
+++ b/index.html
@@ -300,34 +300,34 @@
               <h4>Postdoctoral researcher</h4>
               <h5>2022 - Present</h5>
               <p><em>Postdoctoral researcher at the SAMP Lab under supervision of Dr. Ella Striem-Amit. Georgetown University Medical Center. Washington DC, USA</em></p>
-              <ul>
+              <!--<ul>
                 <li>O QUE ANDAS A FAZER AQUI?? Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
                 <li>O QUE ANDAS A FAZER AQUI?? Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
                 <li>O QUE ANDAS A FAZER AQUI?? Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
                 <li>O QUE ANDAS A FAZER AQUI?? Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
+              </ul>-->
             </div>
             <div class="resume-item">
               <h4>PhD fellow</h4>
               <h5>2017 - 2022</h5>
               <p><em>PhD fellow under supervision of Dr. Jorge Almeida and Dr. Fredrik Bergström. Faculty of Psychology and Educational Sciences, University of Coimbra. Portugal</em></p>
               <ul>
-                <li>O QUE ANDAS A FAZER AQUI?? Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                <!--<li>O QUE ANDAS A FAZER AQUI?? Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
                 <li>O QUE ANDAS A FAZER AQUI?? Managed up to 5 projects or tasks at a given time while under pressure</li>
                 <li>O QUE ANDAS A FAZER AQUI?? Recommended and consulted with clients on the most appropriate graphic design</li>
                 <li>O QUE ANDAS A FAZER AQUI?? Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
+              </ul>-->
             </div>
             <div class="resume-item">
               <h4>Research assistant</h4>
               <h5>2015 - 20217</h5>
               <p><em>Research assistant at the Cognitive and Behavioral Center for Research and Intervention (CINEICC), under supervision of Dr. Jorge Almeida and Dr. Mário Simões. Faculty of Psychology and Educational Sciences, University of Coimbra. Portugal</em></p>
-              <ul>
+              <!--<ul>
                 <li>O QUE ANDAS A FAZER AQUI?? Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
                 <li>O QUE ANDAS A FAZER AQUI?? Managed up to 5 projects or tasks at a given time while under pressure</li>
                 <li>O QUE ANDAS A FAZER AQUI?? Recommended and consulted with clients on the most appropriate graphic design</li>
                 <li>O QUE ANDAS A FAZER AQUI?? Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
+              </ul>-->
             </div>
           </div>
         </div>
@@ -845,14 +845,15 @@
   <footer id="footer">
     <div class="container">
       <h3>Lénia Amaral</h3>
+      <!--
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
-      <!--<div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>-->
+      -->
+      <div class="social-links">
+        <a href="https://scholar.google.com/citations?user=Ze-s-wEAAAAJ&hl=en" class="googlescholar" title="Google Scholar" target="_blank" rel="noopener noreferrer"><i class="ai ai-google-scholar"></i></a>
+        <a href="https://twitter.com/AmaralLenia" class="twitter" title="Twitter" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://www.researchgate.net/profile/Lenia-Amaral-2" class="researchgate" title="ReaserchGate" target="_blank" rel="noopener noreferrer"><i class="ai ai-researchgate-square"></i></a>
+        <a href="https://orcid.org/0000-0002-0631-7944" class="orcid" title="Orcid" target="_blank" rel="noopener noreferrer"><i class="ai ai-orcid-square"></i></a>
+      </div>
     </div>
   </footer><!-- End Footer -->
 
